# ravid-backend-assessment

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  compose.ci.yaml  compose.yaml  pyproject.toml
.agents/: AGENTS.md  MISTAKE.md  WORKFLOW.md
.agents/guidelines/: ai-programming-guidelines.md  assessment-delivery-guidelines.md  code-review-guidelines.md
.agents/references/: assessment-decisions.md  assessment-validation.md  source-links.md  submission-checklist.md
.agents/scripts/: check_assessment_coverage.py  check_mistake_recurrence.py  validate_agents.py
.agents/templates/: plan.md  pr-review.md  pull_request.md  spec.md  test_matrix.md  validation-report.md
.github/workflows/: pr-ci.yml
apps/accounts/: serializers.py  services.py  urls.py  views.py
apps/common/: logging_helpers.py  middleware.py
apps/files/: models.py  serializers.py  services.py  urls.py  views.py
apps/operations/: models.py  pipeline.py  serializers.py  services.py  tasks.py  urls.py  views.py
config/: celery.py  urls.py
config/settings/: base.py  local.py  test.py
docker/alloy/: config.alloy
docker/django/: Dockerfile
docker/loki/: config.yaml
docs/: assessment.md
docs/00-anchor/: brd.md  glossary.md  srs.md  task.md
docs/01-architecture/: api_contract.yaml  database.md  docker.md  observability.md  project_structure.md  system_context.md  testing.md
docs/api/: README.md  ravid-assessment.postman_collection.json
scripts/ci/: run_container_validation.sh  run_python_tests.sh  run_repo_checks.sh
scripts/dev/: generate_stress_csv_fixtures.py
tests/integration/: test_authentication_api.py  test_csv_upload_api.py  (+3 more)
(+81 files in other folders)
