[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ravid-backend-assessment"
version = "0.1.0"
description = "Private R.A.V.I.D. backend assessment repo for CSV upload, Celery processing, observability, and Docker delivery."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<5.3",
    "djangorestframework>=3.17,<3.18",
    "djangorestframework-simplejwt>=5.5,<6",
    "celery[redis]>=5.6,<5.7",
    "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
    "black==26.3.1",
    "pre-commit==4.5.1",
    "commitizen==4.13.10",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "apps*"]

[tool.black]
line-length = 88

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_provider = "commitizen"
update_changelog_on_bump = false
